Allow dev-mode to use preview Java features
Relates to: #8277